fixed alignment on subtotals section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,6 @@
   display: block;
   margin: 0 8px 4px 8px;
 }
+td.text {
+  width: 75%;
+}
